<resources>
    <string name="app_name">TrainX</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">FROM: </string>
    <string name="to">TO: </string>
    <string name="frankfurt_main_station">Frankfurt Main Station</string>
    <string name="hamburg_12_station">Hamburg 12 Station</string>
    <string name="platform">PLATFORM:</string>
    <string name="leave_at">LEAVE AT:</string>
    <string name="arrive_at">ARRIVE AT:</string>
    <string name="buy">Buy</string>
    <string name="price">PRICE:</string>
    <string name="_1_2">1.2 $</string>
    <string name="_15_32">15:32</string>
    <string name="distance">DISTANCE:</string>
    <string name="token_reward">TOKEN REWARD:</string>
    <string name="test">TEST</string>
    <string name="marketplace">Marketplace</string>
    <string name="_1_offer">#1 Offer</string>
    <string name="_2_offer">#2 Offer</string>
    <string name="email_or_walletaddress">Email or WalletAddress</string>
    <string name="check">Check</string>
    <string name="amount_0_00">Amount:</string>
    <string name="exchange">Exchange</string>
    <string name="error_start_destination">Start destination can not be empty</string>
    <string name="error_end_destination">End destination can not be empty</string>
</resources>