<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|top"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/dark_grey_round_rectangler"
        android:padding="8dp">

        <ImageView
            android:id="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_would_you_like_to_buy_this_ticket_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/linearDistance"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/super_green"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/distance"/>

            <TextView
                android:id="@+id/distance"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:ems="7"
                android:lines="1"
                android:textColor="@color/smooth_black"
                android:fontFamily="@font/montserrat_bold"
                android:text="512.23 km"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/restLinear"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearDistance"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/super_green"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/token_reward"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/token"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:lines="1"
                    android:textSize="25sp"
                    android:textColor="@color/smooth_black"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="0.05"/>

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/cryptocurrency"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="end">

                <TextView
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/price"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/super_green"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:ems="5"
                    android:lines="1"
                    android:text="@string/_1_2"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/smooth_black"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/supergreen_round_rectangler"
            android:fontFamily="@font/montserrat_extrabol"
            android:text="@string/buy"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restLinear"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
