<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/smooth_black"
    tools:context=".fragments.MarketPlaceFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/titleLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/marketPlace"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_marketplace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/marketplace"
            android:textColor="@color/white"
            android:textSize="23sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/offersLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/titleLinear">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/supergreen_round_rectangler"
            android:padding="5dp">

            <TextView
                android:id="@+id/offer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_extrabol"
                android:text="@string/_1_offer"
                android:textColor="@color/smooth_black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/fgxLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/offer1">

                <TextView
                    android:id="@+id/offerAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="100 000"
                    android:textColor="@color/smooth_black"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/cryptocurrency"
                    app:layout_constraintStart_toEndOf="@id/offerAmount"
                    app:layout_constraintTop_toBottomOf="@id/offer1" />
            </LinearLayout>

            <TextView
                android:id="@+id/equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat_extrabol"
                android:rotation="90"
                android:text="="
                android:textColor="@color/smooth_black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fgxLinear" />

            <LinearLayout
                android:id="@+id/dollarLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/equal">

                <TextView
                    android:id="@+id/dollar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="100 $"
                    android:textColor="@color/smooth_black"
                    android:textSize="22sp" />

            </LinearLayout>

            <Button
                android:id="@+id/exchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/dark_grey_round_rectangler"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat_bold"
                android:padding="5dp"
                android:text="@string/exchange"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dollarLinear" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/supergreen_round_rectangler"
            android:padding="5dp">

            <TextView
                android:id="@+id/offer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_extrabol"
                android:text="@string/_2_offer"
                android:textColor="@color/smooth_black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/fgxLinear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/offer2">

                <TextView
                    android:id="@+id/goods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Iphone X"
                    android:textColor="@color/smooth_black"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_iphone"
                    app:layout_constraintStart_toEndOf="@id/offerAmount"
                    app:layout_constraintTop_toBottomOf="@id/offer1" />
            </LinearLayout>

            <TextView
                android:id="@+id/equal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat_extrabol"
                android:rotation="90"
                android:text="="
                android:textColor="@color/smooth_black"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fgxLinear2" />

            <LinearLayout
                android:id="@+id/dollarLinear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/equal2">

                <TextView
                    android:id="@+id/dollar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="100 $"
                    android:textColor="@color/smooth_black"
                    android:textSize="22sp" />

            </LinearLayout>

            <Button
                android:id="@+id/exchange2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/dark_grey_round_rectangler"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/montserrat_bold"
                android:padding="5dp"
                android:text="@string/exchange"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dollarLinear2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/white_round_rectangler"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/offersLinear">

        <EditText
            android:id="@+id/emailOrWalletEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/email_or_walletaddress"
            android:inputType="textEmailAddress"
            android:textColor="@color/smooth_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/checkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/grey_round_rectangler"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailOrWalletEditText" />

        <TextView
            android:id="@+id/userAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/amount_0_00"
            android:textColor="@color/smooth_black"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>